--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -7,7 +7,8 @@
 #
 # -------------------------------------------------------------
 
-include makefile.cfg
+# Platform-dependend options can be set in makefile.cfg
+-include makefile.cfg
 
 
 # -------------------------------------------------------------
