Added a makefile for Microsoft Visual C/C++. Added many typecasts and other syntax tweaks, in order to produce less warnings when compiling with Microsoft Visual C/C++.

--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -1,6 +1,7 @@
 # -------------------------------------------------------------
 #
 #       Makefile for BlackMagic utilities
+#       o  uses GCC & GNU Make
 #
 #       For release version, use NDEBUG=
 #       Do "make depend" to update dependencies in this makefile
