Updated guide: corrections, clarifications, some coverage on STM32 code protection, improved some of the pictures. All utilities: improved cross-platform support. bmdebug: DWARF reader (for symbolic information), autocompletion of commands and parameters. bmtrace: user-interface with 3 views and splitter bars, added "time-line" view.

--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -66,7 +66,7 @@ endif
 #               Project
 # -------------------------------------------------------------
 
-OBJLIST_BMDEBUG = bmdebug.o bmscan.o bmp-script.o elf.o \
+OBJLIST_BMDEBUG = bmdebug.o bmscan.o bmp-script.o dwarf.o elf.o \
                   guidriver.o minIni.o rs232.o specialfolder.o \
                   decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
@@ -112,6 +112,8 @@ bmp-script.o : bmp-script.c
 bmp-support.o : bmp-support.c
 
 crc32.o : crc32.c
+
+dwarf.o : dwarf.c
 
 elf.o : elf.c
 
