--- a/source/Makefile.mingw
+++ b/source/Makefile.mingw
@@ -70,21 +70,23 @@ endif
 #               Project
 # -------------------------------------------------------------
 
-OBJLIST_BMDEBUG = bmdebug.o bmscan.o bmp-script.o dwarf.o elf.o \
+OBJLIST_BMDEBUG = bmdebug.o bmp-scan.o bmp-script.o dwarf.o elf.o \
                   guidriver.o minIni.o rs232.o specialfolder.o strlcpy.o \
                   decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
-OBJLIST_BMFLASH = bmflash.o bmscan.o bmp-script.o bmp-support.o crc32.o \
+OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   elf.o gdb-rsp.o guidriver.o minIni.o rs232.o \
                   specialfolder.o xmltractor.o strlcpy.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
-OBJLIST_BMTRACE = bmtrace.o bmscan.o bmp-script.o bmp-support.o crc32.o \
+OBJLIST_BMTRACE = bmtrace.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   elf.o gdb-rsp.o guidriver.o minIni.o rs232.o \
                   specialfolder.o xmltractor.o strlcpy.o \
                   decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
+
+OBJLIST_BMSCAN = bmscan.o bmp-scan.o strlcpy.o
 
 OBJLIST_POSTLINK = elf-postlink.o elf.o
 
@@ -95,10 +97,9 @@ project : bmdebug.exe bmflash.exe bmtrace.exe bmscan.exe elf-postlink.exe traceg
 
 depend :
 	makedepend -b -fmakefile.dep $(OBJLIST_BMDEBUG:.o=.c) $(OBJLIST_BMFLASH:.o=.c) \
-                   $(OBJLIST_BMTRACE:.o=.c) $(OBJLIST_POSTLINK:.o=.c) $(OBJLIST_TRACEGEN:.o=.c)
+                   $(OBJLIST_BMTRACE:.o=.c) $(OBJLIST_BMSCAN:.o=.c) $(OBJLIST_POSTLINK:.o=.c) \
+                   $(OBJLIST_TRACEGEN:.o=.c)
 
-clean : 
-    $(Q)$(shell rm *.o, *.exe)
 
 ##### C files #####
 
@@ -109,6 +110,8 @@ bmflash.o : bmflash.c
 bmscan.o : bmscan.c
 
 bmtrace.o : bmtrace.c
+
+bmp-scan.o : bmp-scan.c
 
 bmp-script.o : bmp-script.c
 
@@ -172,8 +175,8 @@ bmflash.exe : $(OBJLIST_BMFLASH)
 bmtrace.exe : $(OBJLIST_BMTRACE)
 	$(LNK) $(LFLAGS) -o$@ $^ -lm -lcomdlg32 -lgdi32 -lgdiplus -lsetupapi -lshlwapi -lwinusb
 
-bmscan.exe : bmscan.c
-	$(CL) $(INCLUDE) $(CFLAGS) -DSTANDALONE -o$@ $^
+bmscan.exe : $(OBJLIST_BMSCAN)
+	$(LNK) $(LFLAGS) -o$@ $^
 
 elf-postlink.exe : $(OBJLIST_POSTLINK)
 	$(LNK) $(LFLAGS) -o$@ $^
