--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -74,20 +74,20 @@ endif
 # -------------------------------------------------------------
 
 OBJLIST_BMDEBUG = bmdebug.o bmp-scan.o bmp-script.o dwarf.o elf.o \
-                  guidriver.o minIni.o rs232.o specialfolder.o \
-                  decodectf.o parsetsdl.o swotrace.o \
+                  guidriver.o minIni.o nuklear_tooltip.o rs232.o \
+                  specialfolder.o decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
 
 OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
-                  elf.o gdb-rsp.o guidriver.o minIni.o rs232.o \
-                  specialfolder.o xmltractor.o \
+                  elf.o gdb-rsp.o guidriver.o minIni.o nuklear_tooltip.o \
+                  rs232.o specialfolder.o xmltractor.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
 
 OBJLIST_BMTRACE = bmtrace.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
-                  elf.o gdb-rsp.o guidriver.o minIni.o rs232.o \
-                  specialfolder.o xmltractor.o \
+                  elf.o gdb-rsp.o guidriver.o minIni.o nuklear_tooltip.o \
+                  rs232.o specialfolder.o xmltractor.o \
                   decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
@@ -140,6 +140,8 @@ guidriver.o : guidriver.c
 lodepng.o : lodepng.c
 
 minIni.o : minIni.c
+
+nuklear_tooltip.o : nuklear_tooltip.c
 
 rs232.o : rs232.c
 
