--- a/source/Makefile.mingw
+++ b/source/Makefile.mingw
@@ -71,17 +71,17 @@ endif
 # -------------------------------------------------------------
 
 OBJLIST_BMDEBUG = bmdebug.o bmp-scan.o bmp-script.o dwarf.o elf.o \
-                  guidriver.o minIni.o rs232.o specialfolder.o strlcpy.o \
-                  decodectf.o parsetsdl.o swotrace.o \
+                  guidriver.o minIni.o rs232.o nuklear_tooltip.o \
+                  specialfolder.o strlcpy.o decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
-                  elf.o gdb-rsp.o guidriver.o minIni.o rs232.o \
+                  elf.o gdb-rsp.o guidriver.o minIni.o nuklear_tooltip.o rs232.o \
                   specialfolder.o xmltractor.o strlcpy.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMTRACE = bmtrace.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
-                  elf.o gdb-rsp.o guidriver.o minIni.o rs232.o \
+                  elf.o gdb-rsp.o guidriver.o minIni.o nuklear_tooltip.o rs232.o \
                   specialfolder.o xmltractor.o strlcpy.o \
                   decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
@@ -130,6 +130,8 @@ gdb-rsp.o : gdb-rsp.c
 guidriver.o : guidriver.c
 
 minIni.o : minIni.c
+
+nuklear_tooltip.o : nuklear_tooltip.c
 
 rs232.o : rs232.c
 
